--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commitrix",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Git commit quality linter",
   "main": "src/index.js",
   "bin": {
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "inquirer": "^9.0.0"
   }
 }
