--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "prepublishOnly": "npm test"
   },
   "keywords": ["git", "commit", "linter"],
-  "author": "",
+  "author": "zmelliti",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/username/commitrix.git"
+    "url": "https://github.com/zmelliti/commitrix.git"
   },
-  "homepage": "https://github.com/username/commitrix#readme",
+  "homepage": "https://github.com/zmelliti/commitrix#readme",
   "bugs": {
-    "url": "https://github.com/username/commitrix/issues"
+    "url": "https://github.com/zmelliti/commitrix/issues"
   },
   "files": ["src/", "README.md"],
   "engines": {
