--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 # Runtime data
 pids
@@ -13,6 +14,13 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
+.nyc_output
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # OS generated files
 .DS_Store
@@ -29,6 +37,10 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# Build outputs
+dist/
+build/
 
 # Temporary files
 *.tmp
